fixed the gradle

--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Feb 02 21:23:53 PST 2022
-sdk.dir=/Users/blobfish/Library/Android/sdk
+#Sun Aug 13 20:29:29 PDT 2023
+sdk.dir=/Users/sumanth/Library/Android/sdk
